hphp/test/zend/good/ext/hash/tests/whirlpool.php.skipif
<?php
<<__EntryPoint>> function main() {
extension_loaded('hash') or die('skip');
}
