hphp/test/zend/bad/ext/zlib/tests/bug55544.php.skipif
<?php
extension_loaded("zlib") or die("skip");
if (substr(PHP_OS, 0, 3) == 'WIN') {
	die("skip not for windows");
}
?>